--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Index</h1>
-    <img src="../img/chris-ried-ieic5Tq8YMk-unsplash.jpg" alt="">
+    <img src="../img/logo-hvidovre.png" alt="">
     <script src="../js/script.js"></script>
 </body>
 </html>
